add sign up logic and parse token middleware
